# web-dev-26

./: .gitignore  ANALYTICS_SETUP.md  DECADE_THEMES_GUIDE.md  DEPLOYMENT_GUIDE.md  GLOBAL_TEMPLATES_GUIDE.md  LAYOUT_SYSTEM.md  LOCAL_TESTING_GUIDE.md  LSB_WebProduct_Planung.md  MULTITENANT_PLAN.md  README.md  SECURITY_GUIDE.md  TEMPLATE_SYSTEM.md  handover.md  package-lock.json  pyproject.toml  test_multitenant.py
backend/: AGENTS.md  Dockerfile  create_superuser.py  populate_booking_layout.py  populate_decade_themes.py  populate_global_templates.py  populate_layouts.py  populate_pages.py  populate_templates.py  pyproject.toml  pytest.ini  railway.json  requirements-test.txt  requirements.txt  setup_booking_page.py
backend/cms/: settings.py  urls.py
backend/cms_pages/: admin.py  analytics.py  analytics_middleware.py  analytics_views.py  auth_views.py  jwt_auth_views.py  middleware.py  models.py  onboarding_views.py  serializers.py  stripe_views.py  urls.py  views.py
backend/cms_pages/migrations/: 0001_initial.py  0002_designtemplate_page_created_at_page_is_published_and_more.py  0003_pagelayout_page_layout_section_contentblock.py  0004_globaltemplate_page_canonical_url_and_more.py  0005_globaltemplate_accent_color_and_more.py  0006_sitesettings_decade_theme_id.py  0007_contentblock_internal_page_contentblock_link_type.py  0008_decadetheme.py  0009_alter_section_section_type.py  (+3 more)
backend/content/: models.py
backend/tests/: conftest.py  test_analytics.py  test_api_views.py  test_auth.py  test_middleware.py  test_models.py  test_serializers.py
frontend/: AGENTS.md  (+5 more)
(+71 files in other folders)
